[tool.ruff]
line-length = 120

[tool.poetry]
name = "grammar-monster-bot"
version = "0.1.0"
description = ""
authors = ["Denis Malin <denis@malina.page>"]
readme = "README.md"
packages = [{include = "grammar_monster_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
pyrogram = "^2.0.106"
tgcrypto = "^1.2.5"
openai = "^0.27.7"
pydantic = "^1.10.8"
python-dotenv = "^1.0.0"
uvloop = "^0.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
